[tool.poetry]
name = "vector-math-pytest"
version = "0.1.0"
description = "Small vector math module + deep pytest examples"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
hypothesis = ">=6.0,<7.0"
pytest-benchmark = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
# addopts must be a single string
addopts = "--strict-markers --tb=short --cov=vector_math --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
# markers must be an array of strings; keep each marker as one string element
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests interacting with heavy deps",
  "benchmark: benchmark tests",
  "network: tests requiring network access"
]

